--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
